# shopping-list

./: Makefile  app.py  db.py  package-lock.json  package.json  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 3679e03f5287_create_items_table.py  8b5e6e6117e9_add_checked_field.py  d358bd521ab9_checked_default_false.py
start/: routes.ts
static/: styles.css  styles.css.map  styles.scss
templates/: home.html
